--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,22 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "dev-both": "concurrently \"nodemon server.js\" \"cd ../client; npm run dev\""
   },
   "author": "Vishwas Tyagi",
   "license": "ISC",
   "devDependencies": {
+    "concurrently": "^7.1.0",
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.0"
   }
 }
