--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,5 @@
 {
   "name": "movieium",
-  "private": true,
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0"
